_sass/_medium.scss
@import "config";

/* ==|== Links ==== */

.cta-email {
	max-width: 30em;
	margin: 1em auto;
}

/* ==|== Typography ==== */



/* ==|== Headings ==== */



/* ==|== Lists ==== */



/* ==|== Figures ==== */



/* ==|== Forms ==== */



/* ==|== Tables ==== */



/* ==|== role navigation ==== */

#jump {
	top: 2em;
	right: 3em;
	font-size: 1.5em;
	 &:after {
      top: 0.3em;
      left: 3em;
      width:24px;
      height:4px;
      border-top: 12px double $white;
      border-bottom: 4px solid $white;
    }
}

/* ==|== role banner ==== */

#header {

	a {
		float: left;
		width: 66%;
		margin-top: 0;
	}

	img {
		float: left;
		width: auto;
		height: auto;
		border-radius: 1em;
		margin-right: 1em;
	}

	@include clearfix;
}

.site-title {
	display: block;
	margin-top: 0.75em;
	font-size: 2em;
}

/* ==|== role main ==== */

.features {
	@include clearfix;
}

.feature {
	@include alternatingfloats;
}


.chart {
	@include alternatingfloats;
}

.stats {
	@include clearfix;
}

.stats-sources {
	@include column-count(2);
}

.devices {
	@include clearfix;
	column-count: 2;
}

.device {
	margin: 0 0 1em 1em;
	strong {
		display: block;
	}
}

.reasons-list {
	@include clearfix;
}

.reasons {
	@include alternatingfloats;
}

.labs {
	@include clearfix;
}

.lab {
	@include alternatingfloats;
}

.schedule {
	@include clearfix;
}


.reference {
	@include alternatingfloats;
}

/* ==|== role complementary ==== */

#footer {
	clear: both;
}

/* ==|== role contentinfo ==== */



/* ==|== Layout ==== */

